# rust-service

./: .env  Cargo.toml  config.json  test_config.json
src/: main.rs  settings.rs
src/commands/: hello.rs  mod.rs  serve.rs
