[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
clap = "4.5.37"
config = "0.15.11"
dotenv = "0.15.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = "0.8.5"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
